# SCA

./: .gitignore
cpp/: CMakeLists.txt  main.cpp  setup.sh
cpp/include/: cpa.hpp  dataProcess.hpp  processbar.hpp  tables.hpp
cpp/src/: dataProcess.cpp  processbar.cpp  tables.cpp
python/: read.py  stoc.py
